--- a/css/xiaomi.css
+++ b/css/xiaomi.css
@@ -208,9 +208,61 @@ body {
 #lunbo {
 	width:1226px ;
 	margin: 0 auto;
-	background-image: url(../img/xmad_15310599701167_AYcbi.jpg);
+	background-image: url(../img/xmad1.jpg);
 	background-size: contain;
 	cursor: pointer;
+	position: relative;
+}
+#lunbo-right {
+	position: absolute;
+	right: 30px;
+	bottom: 20px;
+}
+.lunbo-jiantou {
+	width: 41px;
+	height: 69px;
+	position: absolute;
+	top: 50%;
+	margin-top: -35px;
+	text-align: center;
+	font-size: 30px !important;
+	padding-top: 12px;
+	box-sizing: border-box;
+	color: #A3A3A3;
+}
+.lunbo-jiantou:hover {
+	background-color: rgba(7,7,7,0.4);
+	color: #E3E3E3;
+}
+#lj-left {
+	left: 234px;
+	padding-right: 4px;
+	border-radius: 0 4px 4px 0;
+}
+#lj-right {
+	right: 0px;
+	padding-left: 4px;
+	border-radius: 4px 0 0 4px;
+}
+#lunbo-right li {
+	float: left;
+	width: 6px;
+	height: 6px;
+	border-radius: 50%;
+	border: 2px solid rgba(255,255,255,0.3);
+	background-color: rgba(0,0,0,0.4);
+	margin: 0px 5px;
+	
+}
+#lunbo-right li:nth-child(1){
+	background-color: #FFF ;
+	background-color: rgba(255,255,255,0.3);
+	border-color: rgba(0,0,0,0.4) ;
+}
+#lunbo-right li:hover {
+	background-color: #FFF !important;
+	background-color: rgba(255,255,255,0.3) !important;
+	border-color: rgba(0,0,0,0.4) !important;
 }
 #lunbo-left {
 	padding: 20px 0;
