--- a/css/xiaomi.css
+++ b/css/xiaomi.css
@@ -73,6 +73,7 @@ body {
 
 #nav-right {
 	float: right;
+	position: relative;
 }
 #nav-right li {
 	float: left;
@@ -87,10 +88,33 @@ body {
 	background-color: #424242;
 	margin-left: 15px;
 }
-/*#nav-right li:nth-child(4):hover {
+#nav-right li:nth-child(4):hover  {
 	background-color: white;
-	color: #ff6700;
-}*/
+}
+#nav-right li:nth-child(4):hover+#nr-tanchu {
+	display: block;
+}
+#nav-right li:nth-child(4):hover a {
+	color: #ff6700 !important;
+}
+#nr-tanchu {
+	width:316px ;
+	height: 97px !important;
+	text-align: center;
+	position: absolute;
+	top: 40px;
+	right: 0px;
+	float: none !important;
+	background-color: white;
+	z-index: 10;
+	box-shadow: 0 2px 10px rgba(0,0,0,0.15);
+	display: none;
+}
+#nr-tanchu span {
+	height: 98px;
+	line-height: 98px;
+	color: #424242 !important;
+}
 #header {
 	width: 1226px;
 	height: 100px;
@@ -140,6 +164,7 @@ body {
 	height:54px;
 	width: 245px;
 }
+
 #sl-in {
 	width:223px ;
 	height: 48px;
@@ -148,14 +173,17 @@ body {
 	font-size: 14px;
 	outline: 0;
 }
+#sl-in:hover+#si-yingxiang #sou-right,#sl-in:hover {
+	border-color: #B3B3B3;
+}
 #sl-in:focus {
 	border-color:#FF6700 ;
 }
-#sl-in:focus+#sl-two {
+#sl-in:focus+#si-yingxiang #sl-two {
 	display: none;
 }
-#sl-in:focus+.bianbo {
-	border: #ff6700 !important;
+#sl-in:focus+#si-yingxiang #sou-right {
+	border-color: #FF6700 ;
 }
 #sl-two {
 	position: absolute;
@@ -277,7 +305,8 @@ body {
 	width: 234px;
 	color: #fff;
 }
-#lunbo-left li {
+
+#lunbo-left>ul>li {
 	/*background-color: rgb(0,0,0,0.6);*/
 	width: 204px;
 	padding-left:30px ;
@@ -285,8 +314,56 @@ body {
 	line-height: 42px;
 	cursor: pointer;
 }
-#lunbo-left li:hover {
+#lunbo-left>ul>li:hover {
 	background-color: #ff6700;
+}
+#lunbo-left li div {
+	width: 992px;
+	height: 460px;
+	position: absolute;
+	top: 0;
+	left: 234px;
+	border: 1px solid #E0E0E0;
+	background-color: #FFFDEF;
+	box-shadow: 0px 8px 16px rgba(0,0,0,0.18);
+	display: none;
+	z-index: 10;
+}
+.ll-tanchu ul {
+	width: 248px;
+	height: 100%;
+	float: left;
+}
+.ll-tanchu ul li {
+	width: 256px;
+	height: 76px;
+	box-sizing: border-box;
+	padding: 18px 20px;
+	cursor: pointer;
+}
+.ll-tanchu ul li:hover span {
+	color: #FF6700 !important;
+	transition: all 0.2s; 
+}
+.ll-tanchu img {
+	width: 40px;
+	height: 40px;
+	margin-right: 12px;
+	vertical-align:top;
+	border-color: transparent;
+}
+.ll-tanchu span {
+	color: #333333;
+	display: inline-block;
+	height: 40px;
+	line-height: 40px;
+	float: none !important;
+	padding-right: 0 !important;
+	margin-bottom: -10px;
+	vertical-align:top;
+}
+#lunbo-left li:hover div {
+	display: block;
 }
 #lunbo-left li span:nth-child(2){
 	float: right;
